Sorting out the image issue on mobile screen sizes

--- a/scss/components/_faq.scss
+++ b/scss/components/_faq.scss
@@ -3,11 +3,19 @@
 /* ============================================= */
 
 html {
-    position: relative;
+    min-height: 100%;
+}
+
+body {
+    margin-top: 170px;
 }
 
 footer {
     text-align: center;
+}
+
+.mobile-images {
+    position: relative;
 }
 
 .image {
@@ -39,6 +47,9 @@ footer {
         cursor: pointer;
         svg {
             margin-left: auto;
+        }
+        p {
+            margin-right: 10px;
         }
         p:hover {
             color: $hover-state
@@ -83,7 +94,7 @@ footer {
     // Centering idea from gopalraju on Stackoverflow: https://stackoverflow.com/questions/30515472/how-to-resize-an-absolute-image-that-is-scale-to-the-window-size/30515975#30515975?newreg=e66d971cdda64570999297785b74c6cb
     left:50%;
     top:50%;
-    transform: translate(-55%, -228%);
+    transform: translate(-55%, -55%);
     // -moz-transform: translate(-55%, -228%);
     // -webkit-transform: translate(-55%, -228%);
     // -o-transform: translate(-55%, -228%);
@@ -97,7 +108,7 @@ footer {
     z-index: 1;
     left:50%;
     top:50%;
-    transform: translate(-50%, -325%);
+    transform: translate(-50%, -1%);
     // -moz-transform: translate(-50%, -325%);
     // -webkit-transform: translate(-50%, -325%);
     // -o-transform: translate(-50%, -325%);
